--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
+        - echo "VITE_API_URL=$VITE_API_URL" >> .env.production
         - npm run build
   artifacts:
     baseDirectory: dist
