--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - echo "VITE_API_URL=$VITE_API_URL" >> .env.production
+        - echo "VITE_API_URL=https://main.d3n3i5jooxdsrv.amplifyapp.com/graphql" >> .env.production
         - npm run build
   artifacts:
     baseDirectory: dist
@@ -17,7 +17,14 @@ frontend:
       headers:
         - key: 'Cache-Control'
           value: 'no-cache'
+    - pattern: '/assets/*'
+      headers:
+        - key: 'Cache-Control'
+          value: 'public, max-age=31536000, immutable'
   redirects:
-    - source: '</^[^.]+$|\.(?!(css|gif|ico|jpg|js|png|txt|svg|woff|woff2|ttf|map|json)$)([^.]+$)/'
+    - source: '/<*>'
       target: '/index.html'
       status: '200'
+  cache:
+    paths:
+      - node_modules/**/*
